--- a/styles/index.css
+++ b/styles/index.css
@@ -191,3 +191,32 @@ body {
 .hot-deal-img {
     padding: 0px 100px;
 }
+
+/* Instagram css start here */
+
+.instagram {
+    margin-top: 128px;
+}
+
+.instagram-titel {
+    color: #272727;
+    text-align: center;
+    font-family: Lato;
+    font-size: 40px;
+    font-weight: 800;
+}
+
+.instagram-description {
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-family: Lato;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    padding: 24px 350px 48px;
+}
+
+.photos {
+    display: flex;
+    gap: 24px;
+}
